@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST exo-0.3.92.tar.bz2 1398751 RMD160 6f4b02eb56b94968c383d915eab038226e2f91a9 SHA1 61a7090f175157bbc4817903c7cae52a20ec3a70 SHA256 585f6c433ad4e0bd7dcb2aa98456cca30562ddd864bac2bb4b4338a0939d7064
-EBUILD exo-0.3.92.ebuild 1051 RMD160 ecbb08f3ab73fe6cb56e767e5dd124939b9f1e25 SHA1 51a499dc53d6828115af2c6f57b3169b64040d75 SHA256 1b290f749901df8be5182843117a139539136a200aa20925eebe4ce8fb958e32
-EBUILD exo-9999.ebuild 1047 RMD160 9306d8ec4f822bb84af7eb1be951599ae7b84846 SHA1 49a5ea46bee3571319fbb1e6a127f830a2d7cce8 SHA256 d724aa6524735d2a90f672fa3f8c4700abe21460aecae242f5a58ac47954e587
-MISC ChangeLog 1346 RMD160 6c46cfa130c910e59eb4cae26deaf3bf25c2d20a SHA1 c233e9ab67e26084bf8b97608a2fe7a3bbdc8258 SHA256 281783e2d3ae5d364cb5ffb1e30b482ce9e04dc8c123de86cd384fe01f0fd271
+EBUILD exo-0.3.92.ebuild 1050 RMD160 23dce76ab75070ff33c3bd55a04bbc66e1ead493 SHA1 fa91093ae0170c0c97bb8704dc01b94c3bf59d4d SHA256 599f08a96a85177d4371bcf6ab4db5f65fd3b4b81e95830f6791974335b357fe
+EBUILD exo-9999.ebuild 1068 RMD160 3139efd159ef9b8ea417aa21aa8a3d1d90da02e3 SHA1 4854f283bd86ba110d44c4931fe25633bebcac5a SHA256 084fa8913883dc04599d90c54e19f79de29b2c22d16b78a17893ab19d9f683f0
+MISC ChangeLog 1480 RMD160 cfa7058905016c4620751e7de39162973ddf6496 SHA1 5e35828908cc4a74435252d130cf8ef45252e039 SHA256 d59d52b90cd9583beb80400a6579a8cbe868b556cb7ac6fa3bc844b073b27132
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAklG2wIACgkQKhnDs22gwa9swQCfTMfDr+YAfB03uDyn30Jm2f2E
-7ksAnifLKY2R80tAl6C0uk6L2bFwQGCI
-=3+tt
+iEYEARECAAYFAklK25cACgkQKhnDs22gwa9L1gCfT8OKP8DPfPLaFX4Zdzhvnnkc
+OmsAn2RP6TR7XFcXiggeUgW7ZgTE1MKA
+=rvJS
 -----END PGP SIGNATURE-----
