@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Dec 2008; Christoph Mende <angelos@gentoo.org> exo-0.3.92.ebuild,
+  exo-9999.ebuild:
+  Use gtk-doc instead of xsltproc for docs
+
   15 Dec 2008; Christoph Mende <angelos@gentoo.org> exo-0.3.92.ebuild,
   exo-9999.ebuild:
   Added USE=doc
